--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
     <link rel="stylesheet" href="./fonts/fonts.css"/>
-    <link rel="stylesheet" href="./styles/style.css"/>
     <link rel="stylesheet" href="./styles/global.css"/>
+    <link rel="stylesheet" href="./styles/style.css"/>
   </head>
   <body>
     <header class="header">
@@ -25,16 +25,15 @@
         </ul>
       </nav>
       <a class="header__logo">
-        <img
+        <img 
         class="header__logo-image"
         src="./images/logo-black.svg"
-        alt="Логотип проекта"
-        />
+        alt="Логотип проекта"/>
       </a>
       <address class="address">
          <a href="tel:+99995555555">+9 999 555 5555</a><br/>
          <a href="mailto:info@sobaka.ge">info@sobaka.ge</a><br/>
-         <a>наб. Принсенграхт 263- <br/>265, Амстердам</a>
+         <a> наб. Принсенграхт 263- <br/>265, Амстердам</a>
       </address>
     </header>
     <main>
@@ -59,13 +58,13 @@
       <section class="lots">
         <h3 class="lots__heading">Лоты</h3>
         <article class="card">
-          <div class="card_type_film">
+          <div class="card card_type_film">
             <div class="overlay"></div>
             <h3 class="lots__card-list-item">Фильм режиссёра, который бросил киношколу</h3>
             <p class="card-text">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы 
               вы не знали, что режиссёр — Пол Томас Андерсон?</p>
           </div>
-          <div class="card_type_book">
+          <div class="card card_type_book">
             <div class="overlay"></div>
             <h3 class="lots__card-list-item">Книга, где описан один скучный день из жизни рекламного агента</h3>
             <p class="card-text">Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на 
@@ -73,25 +72,23 @@
               начиная с античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы 
               поставили на «Улисса» Джеймса Джойса?</p>
           </div>
-          <div class="card_type_picture">
+          <div class="card card_type_picture">
             <div class="overlay"></div>
             <h3 class="lots__card-list-item">Картина, которую повторит даже 5-летний сын маминой подруги</h3>
             <p class="card-text">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на 
               инфузорию-туфельку. Никаких полей, лесов, котиков... Сколько бы вы на такое поставили, если бы не 
-              знали, что это — одна из революционных работ Кандинского?</p>
+              знали, что это – одна из <br/> революционных работ Кандинского?</p>
           </div>
         </article>
         <h4 class="card-link">посмотреть больше</h4>
       </section>
       <section class="about">
         <div class="about__column">
-          
           <a class="about__logo">
             <div class="elem1"><img
             class="about__logo-image"
             src="./images/logo-white.svg"
-            alt="Логотип проекта"
-            />
+            alt="Логотип проекта"/>
           </div></a>
           <div class="elem2"><p class="about__title">Об аукционе</p></div>
             <div class="elem3"><h5 class="about__text">Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. 
@@ -99,7 +96,7 @@
               девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, 
               созданные любителями?</h5>
             </div><div class="elem4"><h6 class="about__text">Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух 
-              и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря <br/>на критику, 
+              и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря на критику, 
               кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил 
               никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми. </h6></div>
         </div>
