--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <header class="header">
       <nav class="header__menu">
         <ul class="header__links-list">
-          <li class="header__links-list-item header__links-list-item_no-bullit">
-            <a class="header__link_active">главная</a>
+          <li class="header__links-list-item header__link_active header__links-list-item_no-bullit">
+            <a class="header__link">главная</a>
           </li>
           <li class="header__links-list-item">
             <a class="header__link" href="#0">посмотреть лоты</a>
@@ -33,7 +33,7 @@
       <address class="address">
          <a href="tel:+99995555555">+9 999 555 5555</a><br/>
          <a href="mailto:info@sobaka.ge">info@sobaka.ge</a><br/>
-         <a> наб. Принсенграхт 263- <br/>265, Амстердам</a>
+         <p> наб. Принсенграхт 263- 265, Амстердам</p>
       </address>
     </header>
     <main>
@@ -51,54 +51,54 @@
           </span>
         </h1>
         <div class="cover__description">
-        <h2 class="cover__description-text">Аукцион вещей, в которые никто не верил</h2>
+        <p class="cover__description-text">Аукцион вещей, в которые никто не верил</p>
         <a href="#0" class="bet-button">
           <p class="bet-button-text">СДЕЛАТЬ СТАВКУ</p></a>
       </div></section>
       <section class="lots">
-        <h3 class="lots__heading">Лоты</h3>
-        <article class="card">
-          <div class="card card_type_film">
+        <h2 class="lots__heading">Лоты</h2>
+        <div class="card">
+          <article class="card_type card_type_film">
             <div class="overlay"></div>
             <h3 class="lots__card-list-item">Фильм режиссёра, который бросил киношколу</h3>
             <p class="card-text">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы 
               вы не знали, что режиссёр — Пол Томас Андерсон?</p>
-          </div>
-          <div class="card card_type_book">
+          </article>
+          <article class="card_type card_type_book">
             <div class="overlay"></div>
-            <h3 class="lots__card-list-item">Книга, где описан один скучный день из жизни рекламного агента</h3>
+            <h4 class="lots__card-list-item">Книга, где описан один скучный день из жизни рекламного агента</h4>
             <p class="card-text">Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на 
               древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, 
               начиная с античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы 
               поставили на «Улисса» Джеймса Джойса?</p>
-          </div>
-          <div class="card card_type_picture">
+          </article>
+          <article class="card_type card_type_picture">
             <div class="overlay"></div>
-            <h3 class="lots__card-list-item">Картина, которую повторит даже 5-летний сын маминой подруги</h3>
+            <h5 class="lots__card-list-item">Картина, которую повторит даже 5-летний сын маминой подруги</h5>
             <p class="card-text">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на 
               инфузорию-туфельку. Никаких полей, лесов, котиков... Сколько бы вы на такое поставили, если бы не 
-              знали, что это – одна из <br/> революционных работ Кандинского?</p>
-          </div>
-        </article>
-        <h4 class="card-link">посмотреть больше</h4>
+              знали, что это – одна из революционных работ Кандинского?</p>
+          </article>
+        </div>
+        <a href="#0" class="card-link">посмотреть больше</a>
       </section>
       <section class="about">
         <div class="about__column">
           <a class="about__logo">
-            <div class="elem1"><img
+            <img
             class="about__logo-image"
             src="./images/logo-white.svg"
             alt="Логотип проекта"/>
-          </div></a>
-          <div class="elem2"><p class="about__title">Об аукционе</p></div>
-            <div class="elem3"><h5 class="about__text">Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. 
+          </a>
+          <div><h2 class="about__title">Об аукционе</h2>
+            <p class="about__text">Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. 
               Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник 
               девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, 
-              созданные любителями?</h5>
-            </div><div class="elem4"><h6 class="about__text">Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух 
+              созданные любителями?</p>
+            <p class="about__text">Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух 
               и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря на критику, 
               кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил 
-              никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми. </h6></div>
+              никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми. </p></div>
         </div>
       </section>
     </main>
@@ -106,7 +106,7 @@
       <address class="address">
         <a href="tel:+99995555555">+9 999 555 5555</a><br/>
         <a href="mailto:info@sobaka.ge">info@sobaka.ge</a><br/>
-        <a>наб. Принсенграхт 263-<br/>265, Амстердам</a>
+        <p>наб. Принсенграхт 263- 265, Амстердам</p>
      </address>
      <nav class="footer__menu">
       <ul class="footer__menu-list">
@@ -123,15 +123,12 @@
     </nav>
     <a class="footer__social-list">
       <img
-      class="footer__social-list-item"
       src="./images/yt.svg"
       alt="YouTube">
       <img
-      class="footer__social-link"
       src="./images/vk.svg"
       alt="VK">
       <img 
-      class="footer__social-icon"
       src="./images/pinterest.svg"
       alt="Pinterest">
     </a>
