--- a/index.html
+++ b/index.html
@@ -59,26 +59,32 @@
         <h2 class="lots__heading">Лоты</h2>
         <ul class="card">
             <li class="lots__card-link"> 
-            <a class="card_type card_type_film">
-            <div class="overlay"></div>
-            <h3 class="lots__card-list-item">Фильм режиссёра, который бросил киношколу</h3>
-            <p class="card-text">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы 
-              вы не знали, что режиссёр — Пол Томас Андерсон?</p></a></li>
+              <a class="card_type card_type_film">
+                <div class="overlay"></div>
+                <h3 class="lots__card-list-item">Фильм режиссёра, который бросил киношколу</h3>
+                <p class="card-text">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы 
+              вы не знали, что режиссёр — Пол Томас Андерсон?</p>
+              </a>
+            </li>
             <li class="lots__card-link"> 
-            <a class="card_type card_type_book">
-            <div class="overlay"></div>
-            <h3 class="lots__card-list-item">Книга, где описан один скучный день из жизни рекламного агента</h3>
-            <p class="card-text">Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на 
+              <a class="card_type card_type_book">
+                <div class="overlay"></div>
+                <h3 class="lots__card-list-item">Книга, где описан один скучный день из жизни рекламного агента</h3>
+                <p class="card-text">Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на 
               древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, 
               начиная с античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы 
-              поставили на «Улисса» Джеймса Джойса?</p></a></li>
+              поставили на «Улисса» Джеймса Джойса?</p>
+              </a>
+            </li>
             <li class="lots__card-link"> 
-            <a class="card_type card_type_picture">
-            <div class="overlay"></div>
-            <h3 class="lots__card-list-item">Картина, которую повторит даже 5-летний сын маминой подруги</h3>
-            <p class="card-text">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на 
+              <a class="card_type card_type_picture">
+                <div class="overlay"></div>
+                <h3 class="lots__card-list-item">Картина, которую повторит даже 5-летний сын маминой подруги</h3>
+                <p class="card-text">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на 
               инфузорию-туфельку. Никаких полей, лесов, котиков... Сколько бы вы на такое поставили, если бы не 
-              знали, что это – одна из революционных работ Кандинского?</p></a></li>
+              знали, что это – одна из революционных работ Кандинского?</p>
+              </a>
+            </li>
         </ul>
         <a href="#0" class="card-link">посмотреть больше</a>
       </section>
@@ -124,13 +130,16 @@
     <div class="footer__social-list">
       <a href="#0"><img
       src="./images/yt.svg"
-      alt="YouTube"></a>
+      alt="YouTube">
+      </a>
       <a href="#0"><img
       src="./images/vk.svg"
-      alt="VK"></a>
+      alt="VK">
+      </a>
       <a href="#0"><img 
       src="./images/pinterest.svg"
-      alt="Pinterest"></a>
+      alt="Pinterest">
+      </a>
     </div>
     </footer>
   </body>
